--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="main">
+<footer class="main" style="background-color:black;">
     <section class="newsletter p-30 text-white wow fadeIn animated">
         <div class="container">
             <div class="row align-items-center">
@@ -25,9 +25,9 @@
             </div>
         </div>
     </section>
-    <section class="section-padding footer-mid">
+    <section class="section-padding footer-mid" style="background-color:black;">
         <div class="container pt-15 pb-20">
-            <div class="row">
+            <div class="row" >
                 <div class="col-lg-4 col-md-6">
                     <div class="widget-about font-md mb-md-5 mb-lg-0">
                         <div class="logo logo-width-1 wow fadeIn animated">
