--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -1,4 +1,10 @@
 <%- include("../../views/partials/admin/header") %>
+<style>
+    .active {
+    background-color:aqua
+    }
+</style>
+
 <div class="content-header row">
     <div class="d-flex justify-content-between align-items-center">
         <h2 class="content-title card-title">Customers</h2>
