--- a/views/admin/edit-productsss.ejs
+++ b/views/admin/edit-productsss.ejs
@@ -41,13 +41,13 @@
                                 <label for="product_name" class="form-label">Product Name</label>
                                 <input type="text" placeholder="Type here" name="productName"
                                     class="form-control border" id="product_name" value="<%= product.productName %>"
-                                    required>
+                                    >
                                 <div id="productName-error" class="error-message"></div>
                             </div>
 
                             <div class="col-lg-4 mb-4">
                                 <label class="form-label">Brand</label>
-                                <select class="form-select border" name="brand" required>
+                                <select class="form-select border" name="brand" >
                                     <% for (let i=0; i < brand.length; i++) { %>
                                         <option value="<%= brand[i].brandName %>">
                                             <%= brand[i].brandName %>
@@ -59,38 +59,19 @@
 
                             <div class="mb-4">
                                 <label class="form-label">Full Description</label>
-                                <!-- <textarea placeholder="Type here" id="descriptionid" name="description"
-                                    class="form-control border" rows="4" required><%=product.description%></textarea> -->
+                                
                                 <input placeholder="Type here" id="descriptionid" value="<%=product.description%>"
                                     name="description" class="form-control border" rows="4">
                                 <div id="description-error" class="error-message"></div>
                             </div>
 
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="mb-4">
-                                        <label class="form-label">Regular Price</label>
-                                        <input placeholder="₹" name="regularPrice" type="number"
-                                            value="<%=product.regularPrice%>" class="form-control border" required>
-                                        <div id="regularPrice-error" class="error-message"></div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-4">
-                                        <label class="form-label">Sale Price</label>
-                                        <input placeholder="₹" name="salePrice" type="number"
-                                            value="<%=product.salePrice%>" class="form-control border">
-                                        <div id="salePrice-error" class="error-message"></div>
-                                    </div>
-                                </div>
-
-                            </div>
-
+                       
                             <div class="mb-4">
                                 <label class="form-label">Category</label>
 
 
-                                <select class="form-select border" name="category" id="categorySelect" required
+                                <select class="form-select border" name="category" id="categorySelect" 
+                                
                                     onchange="updateVariantFields()">
                                     <% for (let i=0; i < cat.length; i++) { %>
                                         <option value="<%= cat[i]._id %> %>"
@@ -120,7 +101,7 @@
                                         <% } else if (variant.categoryType === 'cardio') { %>
                                             <div class="mb-4">
                                                 <label class="form-label">Type</label>
-                                                <select name="variants[<%= index %>][type]" class="form-select border" required>
+                                                <select name="variants[<%= index %>][type]" class="form-select border" >
                                                     <option value="automated"
                                                         <%= variant.type === 'automated' ? 'selected' : '' %>>Automated</option>
                                                     <option value="semi-automated"
@@ -130,9 +111,12 @@
                                             </div>
                                         <% } %>
                                         <div class="mb-4">
-                                            <label class="form-label">Price</label>
-                                            <input type="number" name="variants[<%= index %>][price]" class="form-control border"
-                                                value="<%= variant.price %>" min="0">
+                                            <label class="form-label">Regular Price</label>
+                                            <input type="number" name="variants[<%= index %>][regularPrice]" class="form-control border"
+                                                value="<%= variant.regularPrice %>" >
+                                                <label class="form-label">Sale Price</label>
+                                            <input type="number" name="variants[<%= index %>][salePrice]" class="form-control border"
+                                                value="<%= variant.salePrice %>" >
                                         </div>
                                         <div class="mb-4">
                                             <label class="form-label">Stock</label>
@@ -239,8 +223,6 @@
             addVariantButton.onclick = () => addVariantFields(categoryType);
             variantFieldsContainer.appendChild(addVariantButton);
 
-
-
         }
 
 
@@ -281,15 +263,15 @@
             const commonFields = `
         <div class="mb-4">
             <label class="form-label">Price</label>
-            <input type="number" name="variants[${variantIndex}][price]" class="form-control border" min="0" required>
+            <input type="number" name="variants[${variantIndex}][price]" class="form-control border" min="0" >
         </div>
         <div class="mb-4">
             <label class="form-label">Stock</label>
-            <input type="number" name="variants[${variantIndex}][stock]" class="form-control border" min="0" required>
+            <input type="number" name="variants[${variantIndex}][stock]" class="form-control border" min="0" >
         </div>
         <div class="mb-4">
             <label class="form-label">SKU</label>
-            <input type="text" name="variants[${variantIndex}][sku]" class="form-control border" required>
+            <input type="text" name="variants[${variantIndex}][sku]" class="form-control border" >
         </div>
         <button type="button" class="btn btn-danger btn-sm" onclick="removeVariant(this)">Remove Variant</button>`;
             variantContainer.innerHTML += commonFields;
@@ -392,7 +374,6 @@
                     img.src = croppedCanvas.toDataURL('image/png');
                     alert(`Image ${index} cropped and saved.`);
                 });
-
                 // Cleanup Cropper
                 cropper.destroy();
                 croppers[index] = null;
@@ -441,8 +422,6 @@
 
         }
 
-
-
     function deleteSingleImage(imageId, productId) {
     $.ajax({
         url: "/admin/deleteImage",
@@ -466,7 +445,6 @@
         },
     });
 }
-
 
 
     </script>
