--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -175,6 +175,11 @@
                     </a>
                 </li>
                 <li class="menu-item">
+                    <a class="menu-link" href="/admin/sales-report"> <i class="icon material-icons md-home"></i>
+                        <span class="text">Sales Report</span>
+                    </a>
+                </li>
+                <li class="menu-item">
                     <a class="menu-link" href="/admin/users"> <i class="icon material-icons md-person"></i>
                         <span class="text">Customers</span>
                     </a>
